fix(MetaDetails): layout issue with meta preview

--- a/src/routes/MetaDetails/styles.less
+++ b/src/routes/MetaDetails/styles.less
@@ -97,7 +97,7 @@
         }
 
         .meta-preview {
-            flex: 0 1 40rem;
+            flex: 0 1 auto;
             align-self: stretch;
             padding: 0 4rem 2rem 4rem;
         }
